included android lib and fixed base64 for android